[package]
name = "mmo_parser_cli"
version = "0.1.0"
authors = ["Morindhal <Morindhal@gmail.com>"]

[dependencies]
mmo_parser_backend = { path = "/home/bergman_home/Documents/rust/lib/mmo_parser_backend" }
chrono = "*"
libc = "*"
clap = "*"
clipboard = "*"
ncurses = "*"
json = "*"
log = "*"
env_logger = "*"
